--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -1,11 +1,39 @@
 # Sane scrolling:
 set -g terminal-overrides 'xterm*:smcup@:rmcup@'
+#
+# remap prefix from 'C-b' to 'C-a'
+unbind C-b
+set-option -g prefix C-a
+bind-key C-a send-prefix
+
+# Key bindings:
+bind -n C-n next-window
+bind -n C-p previous-window
 
 # Powerline:
 set-option -g status on
 set-option -g status-interval 2
-set-option -g status-justify "centre"
+set-option -g status-justify "left"
 set-option -g status-left-length 60
 set-option -g status-right-length 90
-set-option -g status-left "#(~/git/GitHub/OtherPeople/tmux-powerline/powerline.sh left)"
-set-option -g status-right "#(~/git/GitHub/OtherPeople/tmux-powerline/powerline.sh right)"
+#set-option -g status-left "#(~/git/GitHub/OtherPeople/tmux-powerline/powerline.sh left)"
+#set-option -g status-right "#(~/git/GitHub/OtherPeople/tmux-powerline/powerline.sh right)"
+
+# set color for status bar:
+set-option -g status-bg black #base02
+set-option -g status-fg yellow #yellow
+set-option -g status-attr dim
+
+# Windows stuff:
+setw -g  window-status-separator ""
+setw -g window-status-current-format "#[bg=yellow]#[fg=black]#[bg=yellow]#[fg=black] #I:#W #[bg=black]#[fg=yellow]"
+setw -g window-status-format "#[bg=black]#[fg=yellow]#I:#W "
+
+# Left and right statuses:
+set-option -g status-left "[ #T ]"
+set-option -g status-right "[adiós k ase]"
+
+# Misc:
+set-window-option -g mode-keys vi
+set-option -g status-position bottom
+
