--- a/tmux/tmux.base-powerline.conf
+++ b/tmux/tmux.base-powerline.conf
@@ -37,4 +37,5 @@ set-option -g status-right "#[bg=$COLOR_2]#[fg=$COLOR_1] #(whoami) @ #h "
 # Misc:
 set-window-option -g mode-keys vi
 set-option -g status-position bottom
+set -s escape-time 0
 
