--- a/tmux/tmux.base-powerline.conf
+++ b/tmux/tmux.base-powerline.conf
@@ -1,14 +1,6 @@
-# Load colors:
-if [[ -f ~/.shell_colors ]]; then
-    source ~/.shell_colors
-else
-    TMUX_COLOR_1="125"
-    TMUX_COLOR_2="15"
-fi
-
-# Define colors (if undefined) (unnecessary):
-if-shell -b 'if [[ "x${TMUX_COLOR_1}" != "x" ]]; then echo 0; fi' TMUX_COLOR_1=colour161
-if-shell -b 'if [[ "x${TMUX_COLOR_2}" != "x" ]]; then echo 0; fi' TMUX_COLOR_2=black
+# Define colors (if undefined):
+if-shell -b 'if [[ "x$TMUX_COLOR_1" != "x" ]]; then echo 0; fi' TMUX_COLOR_1=colour161
+if-shell -b 'if [[ "x$TMUX_COLOR_2" != "x" ]]; then echo 0; fi' TMUX_COLOR_2=black
 
 # Sane scrolling:
 set -g terminal-overrides 'xterm*:smcup@:rmcup@'
@@ -30,17 +22,17 @@ set-option -g status-left-length 60
 set-option -g status-right-length 90
 
 # set color for status bar:
-set-option -g status-bg $COLOR_1
-set-option -g status-fg $COLOR_2
+set-option -g status-bg $TMUX_COLOR_1
+set-option -g status-fg $TMUX_COLOR_2
 
 # Windows stuff:
 setw -g  window-status-separator ""
-setw -g window-status-format "#[bg=$${TMUX_COLOR_1}]#[fg=${TMUX_COLOR_2}]#[bg=${TMUX_COLOR_1}]#[fg=${TMUX_COLOR_2}] #I:#W "
-setw -g window-status-current-format "#[bg=${TMUX_COLOR_2}]#[fg=${TMUX_COLOR_1}] #I:#W #[fg=${TMUX_COLOR_2}]#[bg=${TMUX_COLOR_1}]"
+setw -g window-status-format "#[bg=$$TMUX_COLOR_1]#[fg=$TMUX_COLOR_2]#[bg=$TMUX_COLOR_1]#[fg=$TMUX_COLOR_2] #I:#W "
+setw -g window-status-current-format "#[bg=$TMUX_COLOR_2]#[fg=$TMUX_COLOR_1] #I:#W #[fg=$TMUX_COLOR_2]#[bg=$TMUX_COLOR_1]"
 
 # Left and right statuses:
-set-option -g status-left "#[bg=${TMUX_COLOR_2}]#[fg=${$TMUX_COLOR_1}][ #S ] #[bg=${$TMUX_COLOR_1}]#[fg=${TMUX_COLOR_2}] "
-set-option -g status-right "#[bg=${TMUX_COLOR_2}]#[fg=${$TMUX_COLOR_1}] #(whoami) @ #h "
+set-option -g status-left "#[bg=$TMUX_COLOR_2]#[fg=$TMUX_COLOR_1][ #S ] #[bg=$TMUX_COLOR_1]#[fg=$TMUX_COLOR_2] "
+set-option -g status-right "#[bg=$TMUX_COLOR_2]#[fg=$TMUX_COLOR_1] #(whoami) @ #h "
 
 # Misc:
 set-window-option -g mode-keys vi
