--- a/tmux/tmux.base-powerline.conf
+++ b/tmux/tmux.base-powerline.conf
@@ -27,7 +27,7 @@ set-option -g status-fg $TMUX_COLOR_2
 
 # Windows stuff:
 setw -g  window-status-separator ""
-setw -g window-status-format "#[bg=$$TMUX_COLOR_1]#[fg=$TMUX_COLOR_2]#[bg=$TMUX_COLOR_1]#[fg=$TMUX_COLOR_2] #I:#W "
+setw -g window-status-format "#[bg=$TMUX_COLOR_1]#[fg=$TMUX_COLOR_2]#[bg=$TMUX_COLOR_1]#[fg=$TMUX_COLOR_2] #I:#W "
 setw -g window-status-current-format "#[bg=$TMUX_COLOR_2]#[fg=$TMUX_COLOR_1] #I:#W #[fg=$TMUX_COLOR_2]#[bg=$TMUX_COLOR_1]"
 
 # Left and right statuses:
