--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -1,6 +1,12 @@
+source ~/.shell_colors
+
+# Define colors (if undefined):
+if-shell -b 'if [[ "x$TMUX_COLOR_1" != "x" ]]; then echo 0; fi' TMUX_COLOR_1=colour161
+if-shell -b 'if [[ "x$TMUX_COLOR_2" != "x" ]]; then echo 0; fi' TMUX_COLOR_2=black
+
 # Sane scrolling:
 set -g terminal-overrides 'xterm*:smcup@:rmcup@'
-#
+
 # remap prefix from 'C-b' to 'C-a'
 unbind C-b
 set-option -g prefix C-a
@@ -16,24 +22,22 @@ set-option -g status-interval 2
 set-option -g status-justify "left"
 set-option -g status-left-length 60
 set-option -g status-right-length 90
-#set-option -g status-left "#(~/git/GitHub/OtherPeople/tmux-powerline/powerline.sh left)"
-#set-option -g status-right "#(~/git/GitHub/OtherPeople/tmux-powerline/powerline.sh right)"
 
 # set color for status bar:
-set-option -g status-bg black #base02
-set-option -g status-fg colour33 #yellow
-#set-option -g status-attr dim
+set-option -g status-bg $TMUX_COLOR_1
+set-option -g status-fg $TMUX_COLOR_2
 
 # Windows stuff:
-setw -g  window-status-separator ""
-setw -g window-status-current-format "#[bg=colour33]#[fg=black]#[bg=colour33]#[fg=colour190] #I:#W #[bg=black]#[fg=colour33] "
-setw -g window-status-format " #[bg=black]#[fg=colour33]#I:#W "
+setw -g window-status-separator ""
+setw -g window-status-format "#[bg=$TMUX_COLOR_1]#[fg=$TMUX_COLOR_2]#[bg=$TMUX_COLOR_1]#[fg=$TMUX_COLOR_2] #I:#W "
+setw -g window-status-current-format "#[bg=$TMUX_COLOR_2]#[fg=$TMUX_COLOR_1] #I:#W #[fg=$TMUX_COLOR_2]#[bg=$TMUX_COLOR_1]"
 
 # Left and right statuses:
-set-option -g status-left "[ #T ] "
-set-option -g status-right "[ #(whoami) @ #h ]"
+set-option -g status-left "#[bg=$TMUX_COLOR_2]#[fg=$TMUX_COLOR_1][ #S ] #[bg=$TMUX_COLOR_1]#[fg=$TMUX_COLOR_2] "
+set-option -g status-right "#[bg=$TMUX_COLOR_2]#[fg=$TMUX_COLOR_1] #(whoami) @ #h "
 
 # Misc:
 set-window-option -g mode-keys vi
 set-option -g status-position bottom
+set -s escape-time 0
 
