tmux: disallow annoying window renaming

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -38,4 +38,5 @@ set-option -g status-right "#[bg=$TMUX_COLOR_2]#[fg=$TMUX_COLOR_1] #(whoami) 
 set-window-option -g mode-keys vi
 set-option -g status-position bottom
 set -s escape-time 0
+set-option -g allow-rename off
 
