--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -1,7 +1,3 @@
-# Define colors (if undefined):
-if-shell -b 'if [[ "x$TMUX_COLOR_1" != "x" ]]; then echo 0; fi' TMUX_COLOR_1=colour161
-if-shell -b 'if [[ "x$TMUX_COLOR_2" != "x" ]]; then echo 0; fi' TMUX_COLOR_2=black
-
 # Sane scrolling:
 set -g terminal-overrides 'xterm*:smcup@:rmcup@'
 
@@ -22,17 +18,28 @@ set-option -g status-left-length 60
 set-option -g status-right-length 90
 
 # set color for status bar:
-set-option -g status-bg $TMUX_COLOR_1
-set-option -g status-fg $TMUX_COLOR_2
+# Notice the FUCKING shell within the command sent to if-shell being sh, not bash, hence the 'bash -c'
+if-shell "bash -c \"[ 'x\$TMUX_COLOR_1' != 'x' ]\"" 'set-option -g status-bg $TMUX_COLOR_1' 'set-option -g status-bg black'
+if-shell "bash -c \"[ 'x\$TMUX_COLOR_2' != 'x' ]\"" 'set-option -g status-fg $TMUX_COLOR_2' 'set-option -g status-fg white'
 
 # Windows stuff:
+# Notice the FUCKING shell within the command sent to if-shell being sh, not bash, hence the 'bash -c'
 setw -g window-status-separator ""
-setw -g window-status-format "#[bg=$TMUX_COLOR_1]#[fg=$TMUX_COLOR_2]#[bg=$TMUX_COLOR_1]#[fg=$TMUX_COLOR_2] #I:#W "
-setw -g window-status-current-format "#[bg=$TMUX_COLOR_2]#[fg=$TMUX_COLOR_1] #I:#W #[fg=$TMUX_COLOR_2]#[bg=$TMUX_COLOR_1]"
+if-shell "bash -c \"[ 'x\$TMUX_COLOR_1' != 'x' ]\"" \
+    'setw -g window-status-format "#[bg=$TMUX_COLOR_1]#[fg=$TMUX_COLOR_2]#[bg=$TMUX_COLOR_1]#[fg=$TMUX_COLOR_2] #I:#W "' \
+    'setw -g window-status-format "#[bg=black]#[fg=white]#[bg=black]#[fg=white] #I:#W "'
+if-shell "bash -c \"[ 'x\$TMUX_COLOR_1' != 'x' ]\"" \
+    'setw -g window-status-current-format "#[bg=$TMUX_COLOR_2]#[fg=$TMUX_COLOR_1] #I:#W #[fg=$TMUX_COLOR_2]#[bg=$TMUX_COLOR_1]"' \
+    'setw -g window-status-current-format "#[bg=white]#[fg=black] #I:#W #[fg=white]#[bg=black]"'
 
 # Left and right statuses:
-set-option -g status-left "#[bg=$TMUX_COLOR_2]#[fg=$TMUX_COLOR_1][ #S ] #[bg=$TMUX_COLOR_1]#[fg=$TMUX_COLOR_2] "
-set-option -g status-right "#[bg=$TMUX_COLOR_2]#[fg=$TMUX_COLOR_1] #(whoami) @ #h "
+# Notice the FUCKING shell within the command sent to if-shell being sh, not bash, hence the 'bash -c'
+if-shell "bash -c \"[ 'x\$TMUX_COLOR_1' != 'x' ]\"" \
+    'set-option -g status-left "#[bg=$TMUX_COLOR_2]#[fg=$TMUX_COLOR_1][ #S ] #[bg=$TMUX_COLOR_1]#[fg=$TMUX_COLOR_2] "' \
+    'set-option -g status-left "#[bg=white]#[fg=black][ #S ] #[bg=black]#[fg=white] "'
+if-shell "bash -c \"[ 'x\$TMUX_COLOR_1' != 'x' ]\"" \
+    'set-option -g status-right "#[bg=$TMUX_COLOR_2]#[fg=$TMUX_COLOR_1] #(whoami) @ #h "' \
+    'set-option -g status-right "#[bg=white]#[fg=black] #(whoami) @ #h "'
 
 # Misc:
 set-window-option -g mode-keys vi
