--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -46,4 +46,5 @@ set-window-option -g mode-keys vi
 set-option -g status-position bottom
 set -s escape-time 0
 set-option -g allow-rename off
+set-option -ga terminal-overrides ",xterm-256color:Tc"
 
