--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -1,3 +1,8 @@
+# Call this from a ~/.tmux.conf file, as follows:
+# TMUX_COLOR_1=colour25
+# TMUX_COLOR_2=colour15
+# source-file /path/to/this/tmux.conf
+
 # Sane scrolling:
 set -g terminal-overrides 'xterm*:smcup@:rmcup@'
 
