Remove some old aliases.

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -41,4 +41,4 @@ set-option -g status-position bottom
 set -s escape-time 0
 set-option -g allow-rename off
 set-option -ga terminal-overrides ",xterm-256color:Tc"
-
+set -g pane-active-border-style fg=colour14,bg=default
