--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -1,7 +1,5 @@
-# Call this from a ~/.tmux.conf file, as follows:
-# TMUX_COLOR_1=colour25
-# TMUX_COLOR_2=colour15
-# source-file /path/to/this/tmux.conf
+# Place tmux.conf.example in ~/.tmux.conf,
+# and use that to call this file.
 
 # Sane scrolling:
 set -g terminal-overrides 'xterm*:smcup@:rmcup@'
