Update tmux status bar style.

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -30,7 +30,7 @@ setw -g window-status-format "#[bg=$TMUX_COLOR_1]#[fg=$TMUX_COLOR_2]#[bg=$TMUX_C
 setw -g window-status-current-format "#[bg=$TMUX_COLOR_2]#[fg=$TMUX_COLOR_1] #I:#W #[fg=$TMUX_COLOR_2]#[bg=$TMUX_COLOR_1]"
 
 # Left and right statuses:
-set-option -g status-left "#[bg=$TMUX_COLOR_2]#[fg=$TMUX_COLOR_1][ #S ] #[bg=$TMUX_COLOR_1]#[fg=$TMUX_COLOR_2] "
+set-option -g status-left "#[bg=$TMUX_COLOR_2]#[fg=$TMUX_COLOR_1][ #S ]#[bg=$TMUX_COLOR_1]#[fg=$TMUX_COLOR_2] "
 set-option -g status-right "#[bg=$TMUX_COLOR_2]#[fg=$TMUX_COLOR_1] #(whoami) @ #h "
 
 # Misc:
