Move tmux style to .shell_theme.

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -27,11 +27,11 @@ set-option -g status-fg $TMUX_COLOR_2
 # Windows stuff:
 setw -g window-status-separator ""
 setw -g window-status-format "#[bg=$TMUX_COLOR_1]#[fg=$TMUX_COLOR_2]#[bg=$TMUX_COLOR_1]#[fg=$TMUX_COLOR_2] #I:#W "
-setw -g window-status-current-format "#[bg=$TMUX_COLOR_2]#[fg=$TMUX_COLOR_1] #I:#W #[fg=$TMUX_COLOR_2]#[bg=$TMUX_COLOR_1]"
+setw -g window-status-current-format "#[bg=$TMUX_COLOR_2]#[fg=$TMUX_COLOR_1]$TMUX_SEPARATOR #I:#W #[fg=$TMUX_COLOR_2]#[bg=$TMUX_COLOR_1]$TMUX_SEPARATOR"
 
 # Left and right statuses:
-set-option -g status-left "#[bg=$TMUX_COLOR_2]#[fg=$TMUX_COLOR_1][ #S ] #[bg=$TMUX_COLOR_1]#[fg=$TMUX_COLOR_2] "
-set-option -g status-right "#[bg=$TMUX_COLOR_2]#[fg=$TMUX_COLOR_1] #(whoami) @ #h "
+set-option -g status-left "#[bg=$TMUX_COLOR_2]#[fg=$TMUX_COLOR_1][ #S ] #[bg=$TMUX_COLOR_1]#[fg=$TMUX_COLOR_2]$TMUX_SEPARATOR "
+set-option -g status-right "#[bg=$TMUX_COLOR_2]#[fg=$TMUX_COLOR_1]$TMUX_SEPARATOR #(whoami) @ #h "
 
 # Misc:
 set-window-option -g mode-keys vi
