--- a/zsh/shell_theme.example
+++ b/zsh/shell_theme.example
@@ -1,6 +1,21 @@
-COLOR_BACK=236
-COLOR_HIGH=176
-COLOR_PATH_BACK=005
+
 COLOR_FRONT_LIGHT=015
 COLOR_FRONT_DARK=016
+COLOR_HIGH=176
+
+# Path:
+COLOR_PATH_BACK=005
+COLOR_PATH_FRONT=015
+
+# Virtualenv, Conda, Poetry...
+COLOR_VIRTUALENV_FRONT=015
 COLOR_VIRTUALENV_BACK=053
+
+# Prompt:
+PROMPT_COLOR=$COLOR_PATH_BACK
+PROMPT_SYMBOL=$'\u276f'
+
+# Tmux:
+TMUX_COLOR_1=colour236
+TMUX_COLOR_2=colour176
+TMUX_SEPARATOR=""
