--- a/starship/starship.toml
+++ b/starship/starship.toml
@@ -22,18 +22,16 @@ charging_symbol = '⚡️'
 format = '[$symbol$percentage]($style) '
 
 [[battery.display]]
-threshold = 100
-style = '#12dd43'
-
+threshold = 20
+style = 'bold red'
 
 [[battery.display]]
 threshold = 50
 style = 'bold yellow'
 
-
 [[battery.display]]
-threshold = 20
-style = 'bold red'
+threshold = 100
+style = '#12dd43'
 
 [character]
 success_symbol = "[\U00002192](bold green)"
@@ -50,7 +48,7 @@ when = false
 truncation_length = 5
 truncation_symbol = '…/'
 truncate_to_repo = false
-style = 'bold #729FCF'
+style = 'blue'
 
 [git_branch]
 style = 'bold cyan'
