Add font to Alacritty conf

--- a/alacritty/alacritty.toml
+++ b/alacritty/alacritty.toml
@@ -21,6 +21,7 @@ style = "Medium Italic"
 [font.normal]
 family = "BitstreamVeraSansMono Nerd Font Mono"
 #family = "UbuntuSansMono Nerd Font"
+#family = "FiraMono Nerd Font"
 style = "Medium"
 
 [window]
