--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -1,5 +1,8 @@
-# Place tmux.conf.example in ~/.tmux.conf,
-# and use that to call this file.
+# Theme:
+TMUX_COLOR_1=colour236
+TMUX_COLOR_2=colour176
+#TMUX_SEPARATOR=""
+TMUX_SEPARATOR=""
 
 # Sane scrolling:
 set -g terminal-overrides 'xterm*:smcup@:rmcup@'
@@ -40,3 +43,10 @@ set -s escape-time 0
 set-option -g allow-rename off
 set-option -ga terminal-overrides ",xterm-256color:Tc"
 set -g pane-active-border-style fg=colour14,bg=default
+
+# List of plugins:
+set -g @plugin 'tmux-plugins/tpm'
+set -g @plugin 'tmux-plugins/tmux-resurrect'
+
+# Initialize TMUX plugin manager (keep this at the very bottom of .tmux.conf):
+run -b '~/.tmux/plugins/tpm/tpm'
