--- a/alacritty/alacritty.toml
+++ b/alacritty/alacritty.toml
@@ -1,5 +1,3 @@
-live_config_reload = true
-
 [env]
 TERM = "xterm-256color"
 
@@ -32,3 +30,6 @@ opacity = 0.75
 [window.padding]
 x = 20
 y = 0
+
+[general]
+live_config_reload = true
