--- a/starship/starship.toml
+++ b/starship/starship.toml
@@ -11,9 +11,10 @@ add_newline = true
 #[character] # The name of the module we are configuring is 'character'
 #success_symbol = '[➜](bold green)' # The 'success_symbol' segment is being set to '➜' with the color 'bold green'
 
-# Disable the package module, hiding it from the prompt completely
 [package]
 disabled = false
+symbol = "\U000023F9 "  # original, does not work :(
+#symbol = ": "
 
 
 [battery]
